Added missing files to svn Set BASE_MODULE_VERSION in configure/RELEASE
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@1373 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/Makefile
+++ b/pcds_motionApp/Db/Makefile
@@ -13,6 +13,7 @@ include $(TOP)/configure/CONFIG
 DB += clinometer.template
 DB += table-protection.template
 DB += motor-status.template
+DB += motor-limit-aggregator.template
 DB += basic_motor_jt.template
 
 #----------------------------------------------------
