Added pcds_motor.template and modified to build for all 3 arch
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@3130 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/Makefile
+++ b/pcds_motionApp/Db/Makefile
@@ -15,6 +15,7 @@ DB += table-protection.template
 DB += motor-status.template
 DB += motor-limit-aggregator.template
 DB += basic_motor_jt.template
+DB += pcds_motor.template
 
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
