Added MCode streamdevice template file. Added MCode protocol file. Will support current motor record integration, and will continue to test and add new features before integrating into new systems.
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@3564 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/Makefile
+++ b/pcds_motionApp/Db/Makefile
@@ -16,6 +16,7 @@ DB += motor-status.template
 DB += motor-limit-aggregator.template
 DB += basic_motor_jt.template
 DB += pcds_motor.template
+DB += mcode.template
 
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
