Added Newall absolute encoder protocol file for CXI precision stand Added AGI MD900 clinometer proto file for various CXI stands Added archiving for newall encoder Added OFF to autosave_motor_positions Added DESC, BDST, SBAK to autosave_motor_settings
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@4168 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/Makefile
+++ b/pcds_motionApp/Db/Makefile
@@ -17,15 +17,17 @@ DB += motor-limit-aggregator.template
 DB += motor-status.template
 DB += pcds_motor.template
 DB += table-protection.template
+DB += newall-shg-a2.template
 
 #
 # Create and install archive templates and sample substitutions
 #
 ARCHIVE	+= archive_clinometer.template
 ARCHIVE	+= archive_motor.template
+ARCHIVE	+= archive_newall-shg-a2.template
 
 #
-# Create and install archive templates and sample substitutions
+# Create and install autosave templates and sample substitutions
 #
 REQ	+= autosave_clinometer.template
 REQ	+= autosave_motor_positions.template
