--- a/pcds_motionApp/srcProtocol/Makefile
+++ b/pcds_motionApp/srcProtocol/Makefile
@@ -10,6 +10,8 @@ include $(TOP)/configure/CONFIG
 
 # What protocol files should be copied as part of the build.
 COPY_FILES = mcode.proto
+COPY_FILES = newall-shg-a2.proto
+COPY_FILES = AGI_MD900_clinometer.proto
 
 # What subdirectory should hold the protcol files.  For this example,
 # $INSTALL_LOCATION/protocol will be created.
