Corrected name of call for protocol file.
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@4315 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/newall-shg-a2.template
+++ b/pcds_motionApp/Db/newall-shg-a2.template
@@ -6,7 +6,7 @@
 record(longin, "$(cont):POSITION") {
   field(DESC, "Newall SHG-A2 Linear Encoder")
   field(DTYP, "stream")
-  field(INP, "@streamDevice.proto GET_ENCODER_POSITION bus$(bus) $(addr)")
+  field(INP, "@newall-shg-a2.proto GET_ENCODER_POSITION bus$(bus) $(addr)")
   field(SCAN, "2 second")
 }
 
