Changed newall linear encoder scan time to 1 second
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@4349 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/newall-shg-a2.template
+++ b/pcds_motionApp/Db/newall-shg-a2.template
@@ -7,13 +7,13 @@ record(longin, "$(cont):POSITION") {
   field(DESC, "Newall SHG-A2 Linear Encoder")
   field(DTYP, "stream")
   field(INP, "@newall-shg-a2.proto GET_ENCODER_POSITION bus$(bus) $(addr)")
-  field(SCAN, "2 second")
+  field(SCAN, "1 second")
+  field(FLNK, "$(cont):CALC:mm")
 }
 
 
 record(calc, "$(cont):CALC:mm") {
   field(DESC, "Position in mm")
-  field(SCAN, "I/O Intr")
   field(CALC, "A/B*C")
   field(INPA, "$(cont):POSITION")
   field(INPB, "2")
