Added new templates: 	sim-motor.template 	motor-interlock.template 	sim-valve.template Updated configure RULES and minor cleanup in some other templates.
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@4726 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/Makefile
+++ b/pcds_motionApp/Db/Makefile
@@ -15,7 +15,10 @@ DB += clinometer.template
 DB += mcode.template
 DB += motor-limit-aggregator.template
 DB += motor-status.template
+DB += motor-interlock.template
 DB += pcds_motor.template
+DB += sim-valve.template
+DB += sim-motor.template
 DB += table-protection.template
 DB += newall-shg-a2.template
 
