--- a/configure/RULES
+++ b/configure/RULES
@@ -1,6 +1,11 @@
 # RULES
 
-include $(EPICS_BASE)/configure/RULES
+include $(CONFIG)/RULES
+include $(TOP)/configure/RULES.restore
+include $(TOP)/configure/RULES.archive
+
+UNINSTALL_DIRS += $(INSTALL_RESTORE)
+UNINSTALL_DIRS += $(INSTALL_ARCHIVE)
 
 # Library should be rebuilt because LIBOBJS may have changed.
 $(LIBNAME): ../Makefile
