Fixed extra "Interlock" keyword in default Error string for the 	motor-interlock.template Removed some stale offscreen widgets in the embedded displays
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@4756 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/motor-interlock.template
+++ b/pcds_motionApp/Db/motor-interlock.template
@@ -61,7 +61,7 @@ record( stringout,	"$(ILK):DispName" )
 record( stringout,	"$(ILK):Error" )
 {
 	field( DESC,	"Interlock Error Message" )
-	field( VAL,		"$(ERR_MSG=$(NAME) Interlock Engaged!)" )
+	field( VAL,		"$(ERR_MSG=$(NAME) Engaged!)" )
 	field( PINI,	"YES" )
 }
 
