Added local development files to pcds_motion Mcode related template and GUIs Added ims_bootup script for v2 of the motor software
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@4823 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/Makefile
+++ b/pcds_motionApp/Db/Makefile
@@ -17,6 +17,7 @@ DB += motor-limit-aggregator.template
 DB += motor-status.template
 DB += motor-interlock.template
 DB += pcds_motor.template
+DB += pcds_motor_v2.template
 DB += sim-valve.template
 DB += sim-motor.template
 DB += table-protection.template
