Added a "MENV" field to accept an environment variable pointing to the module("PCDS_MOTION")/load area; together with the previously defined "MPGM" field, this would make up the complete path, which can be much longer than 40 characters, to the MCode program.
This "MENV" field can be omitted if the complete path to the MCode program
is shorter than 40 characters and can be entered through the "MPGM" field
alone.

The end result would be: $MENV + MPGM = path to MCode


git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@4827 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/pcds_motor_v2.template
+++ b/pcds_motionApp/Db/pcds_motor_v2.template
@@ -24,10 +24,11 @@ grecord(motor,"$(P)$(M)")
 	field(INIT,"")
 	field(TWV, "1")
 	field(IMS, "1")
-	field(MPGM,"/reg/neh/home/dhzhang/ims_mcode.txt")
+	field(MENV,"PCDS_MOTION")
+	field(MPGM,"/pcds_motionApp/src/ims_bootup.mcode")
 	field(SDLT,30)
 }
-record(bo,"$(P)$(M)_Update")
+record(bo,"$(P)$(M):Update")
 {
 	field(DESC,"Force $(DESC) to Update")
 	field(VAL,  1)
