Fixed a few fields missing quotes for their default values. Causing VDCT to not work properly
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@5063 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/pcds_motor_ims.template
+++ b/pcds_motionApp/Db/pcds_motor_ims.template
@@ -26,12 +26,12 @@ grecord(motor,"$(P)$(M)")
 	field(IMS, "1")
 	field(MENV,"PCDS_MOTION")
 	field(MPGM,"/pcds_motionApp/src/ims_bootup.mcode")
-	field(SDLT,30)
+	field(SDLT,"30")
 }
 record(bo,"$(P)$(M):Update")
 {
 	field(DESC,"Force $(DESC) to Update")
-	field(VAL,  1)
-	field(OUT,  "$(P)$(M).PROC")
-	field(SCAN, "10 second")
+	field(VAL, "1")
+	field(OUT, "$(P)$(M).PROC")
+	field(SCAN,"10 second")
 }
