--- a/pcds_motionApp/Db/pcds_motor_ims.template
+++ b/pcds_motionApp/Db/pcds_motor_ims.template
@@ -27,6 +27,7 @@ grecord(motor,"$(P)$(M)")
 	field(MENV,"PCDS_MOTION")
 	field(MPGM,"/pcds_motionApp/src/ims_bootup.mcode")
 	field(SDLT,"30")
+        field(FOFF,"Frozen")
 }
 record(bo,"$(P)$(M):Update")
 {
