Added test motor template to pcds_motion
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@5294 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/Makefile
+++ b/pcds_motionApp/Db/Makefile
@@ -18,6 +18,7 @@ DB += motor-status.template
 DB += motor-interlock.template
 DB += pcds_motor.template
 DB += pcds_motor_ims.template
+DB += pcds_motor_test.template
 DB += sim-valve.template
 DB += sim-motor.template
 DB += table-protection.template
