--- a/pcds_motionApp/Db/pcds_motor_ims.template
+++ b/pcds_motionApp/Db/pcds_motor_ims.template
@@ -31,7 +31,7 @@ grecord(motor,"$(P)$(M)")
 }
 record(bo,"$(P)$(M):Update")
 {
-	field(DESC,"Force $(DESC) to Update")
+	field(DESC,"Force motor to Update")
 	field(VAL, "1")
 	field(OUT, "$(P)$(M).PROC")
 	field(SCAN,"10 second")
