Added an IMS specific motor settings file
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@5679 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/Makefile
+++ b/pcds_motionApp/Db/Makefile
@@ -38,6 +38,7 @@ ARCHIVE	+= archive_newall-shg-a2.template
 REQ	+= autosave_clinometer.template
 REQ	+= autosave_motor_positions.template
 REQ	+= autosave_motor_settings.template
+REQ	+= ims_motor_settings.template
 
 
 include $(TOP)/configure/RULES
