Modified newall encoder archive template to correct syntax
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/pcds_motion/current@6225 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/pcds_motionApp/Db/archive_newall-shg-a2.template
+++ b/pcds_motionApp/Db/archive_newall-shg-a2.template
@@ -1,5 +1,3 @@
-# Archive these values
-# Macros:
-#	EXP	- Experiment: AMO, SXR, ...
+# Archive Newall absolute encoder position
+$(cont):POSITION             1                monitor
 
-$(cont):POSITION
